added skelaton of navbar section

--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,9 @@
     <title>Find Job</title>
     <link href="/src/style.css" rel="stylesheet" />
   </head>
-  <body style="background-color: rgb(108, 105, 105);">
+  <body >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<!-- style="background-color: rgb(192, 76, 76);" -->
